Modify build.xml and add back pom.xml